[gd_scene load_steps=2 format=3 uid="uid://prv3v6ohrae8"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_c8qu5"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_c8qu5")

[node name="Button" type="Button" parent="."]
offset_left = 230.0
offset_top = 279.0
offset_right = 271.0
offset_bottom = 310.0
scale = Vector2(5, 5)
text = "Play"

[node name="ExitButton" type="Button" parent="."]
offset_left = 536.0
offset_top = 284.0
offset_right = 577.0
offset_bottom = 315.0
scale = Vector2(5, 5)
text = "Exit"

[node name="Label" type="Label" parent="."]
offset_left = 234.0
offset_top = 105.0
offset_right = 374.0
offset_bottom = 128.0
scale = Vector2(5, 5)
text = "Super ultra hra"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 261.0
offset_top = 489.0
offset_right = 880.0
offset_bottom = 581.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="HSlider2" type="HSlider" parent="."]
offset_left = 263.0
offset_top = 542.0
offset_right = 882.0
offset_bottom = 634.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="HSlider3" type="HSlider" parent="."]
offset_left = 257.0
offset_top = 579.0
offset_right = 876.0
offset_bottom = 671.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label2" type="Label" parent="."]
offset_left = 210.0
offset_top = 518.0
offset_right = 256.0
offset_bottom = 541.0
text = "Master
"

[node name="Label3" type="Label" parent="."]
offset_left = 217.0
offset_top = 575.0
offset_right = 263.0
offset_bottom = 598.0
text = "Music
"

[node name="Label4" type="Label" parent="."]
offset_left = 217.0
offset_top = 607.0
offset_right = 263.0
offset_bottom = 630.0
text = "SFX
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="HSlider3" to="." method="_on_h_slider_3_value_changed"]
